--- a/templates/setup.html
+++ b/templates/setup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MemberPort | Installation</title>
-    <link rel="stylesheet" href="{{ static_url('css/client.bundle.css') }}">
+    <link rel="stylesheet" href="{{ static_url('css/app.bundle.css') }}">
 </head>
 
 <body>
