--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     {% else %}
     <title>MemberPort</title>
     {% end %}
-    <link rel="stylesheet" href="{{ static_url('css/client.bundle.css') }}">
+    <link rel="stylesheet" href="{{ static_url('css/app.bundle.css') }}">
     <link rel="stylesheet" href="{{ static_url('fontawesome/css/all.min.css') }}">
     {% block head %}{% end %}
 </head>
