--- a/templates/error/404.html
+++ b/templates/error/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
-    <link rel="stylesheet" href="{{ static_url('css/client.bundle.css') }}">
+    <link rel="stylesheet" href="{{ static_url('css/app.bundle.css') }}">
 </head>
 <body>
     <div class="container has-text-centered">
