feat: add eslint and fix lint errors

--- a/templates/admin/organizations.html
+++ b/templates/admin/organizations.html
@@ -19,7 +19,7 @@
 {% block scripts %}
 <script type="text/javascript">
 // specify the data
-var __GRID_DATA__= [
+var _GRID_DATA_= [
         {% for organization in organizations %}
         {
             id: "{{ organization.id }}",
