--- a/templates/admin/members.html
+++ b/templates/admin/members.html
@@ -1,14 +1,14 @@
 {% extends "../base.html" %}
 {% block head %}
 <script type="text/javascript">
-    var __GRID_DATA__ = [
+    var _GRID_DATA_ = [
     {% for member in members %}
     {
         number: "{{ member.traits['member_number'] }}",
         name: "{{ member.traits['name']['first'] + " " + member.traits['name']['last'] }}",
         email: "{{ member.traits['email'] }}",
         phone: "070000000",
-        postal_code: "{{ member.traits['postal_address']['postal_code'] }}",
+        postalCode: "{{ member.traits['postal_address']['postal_code'] }}",
         city: "{{ member.traits['postal_address']['city'] }}",
         street: "{{ member.traits['postal_address']['street'] }}",
         country: "{{ member.traits['country'] }}"
