feat: page for editing a member

--- a/templates/admin/members/add-member.html
+++ b/templates/admin/members/add-member.html
@@ -1,9 +1,4 @@
-{% extends "../base.html" %}
-{% block head %}
-<script src="{{ static_url('js/ag-grid-community.min.noStyle.js') }}"></script>
-<link rel="stylesheet" href="{{ static_url('css/ag-grid.css') }}">
-<link rel="stylesheet" href="{{ static_url('css/ag-theme-alpine.css') }}">
-{% end %}
+{% extends "../../base.html" %}
 {% block content %}
 <div class="section">
 <h1 class="title">Add member</h1>
