--- a/templates/admin/members/members.html
+++ b/templates/admin/members/members.html
@@ -1,4 +1,4 @@
-{% extends "../base.html" %}
+{% extends "../../base.html" %}
 {% block head %}
 <script type="text/javascript">
     var _GRID_DATA_ = [
