--- a/templates/admin/geography.html
+++ b/templates/admin/geography.html
@@ -3,9 +3,23 @@
 <section class="section">
     <div class="container">
         <h1 class="title">Geografi</h1>
-        <div class="container">
-            <div id="tree">
+        <div class="columns">
+            <div class="column">
+                <div class="select">
+                    <select id="country" name="country">
+                        <option disabled selected value>Välj land</option>
+                        {% for country in countries %}
+                        <option {{ "selected" if country.id.int == selected_country.id.int else "" }} value="{{ country.id }}">{{ country.name }}</option>
+                        {% end %}
+                    </select>
+                </div>
             </div>
+            <div class="column">
+                <button onclick="saveGeography();" class="button is-success">Spara</button>
+            </div>
+            {% module xsrf_form_html() %}
+        </div>
+        <div id="tree">
         </div>
         <div id="deleteModal" class="modal">
             <div class="modal-background"></div>
@@ -48,27 +62,27 @@
 {% end %}
 
 {% block scripts %}
+<script src="{{ static_url('js/api.js') }}"></script>
 <script src="{{ static_url('js/geography.js') }}"></script>
 <script>
-    var swedenID = "";
+    var selectedCountryID = "";
     var parentID = "";
-    {% for country in countries %}
-    geodata["{{ country.id }}"] = {
-        name: "{{ country.name }}",
-        id: "{{ country.id }}"
+
+    geodata["{{ selected_country.id }}"] = {
+        name: "{{ selected_country.name }}",
+        id: "{{ selected_country.id }}"
     };
-    if ("{{ country.name }}" === "Sverige") {
-        swedenID = "{{ country.id }}";
-        addCountry(swedenID, "{{ country.name }}");
-    }
-    {% end %}
+
+    selectedCountryID = "{{ selected_country.id }}";
+    addCountry("{{ selected_country.id }}", "{{ selected_country.name }}");
+
     {% for area in areas %}
     geodata["{{ area.id }}"] = {
         name: "{{ area.name }}",
         id: "{{ area.id }}",
         path: "{{ area.path }}"
     };
-    parentID = getParentID("{{ area.id }}", "{{ area.path }}", swedenID);
+    parentID = getParentID("{{ area.id }}", "{{ area.path }}", selectedCountryID);
     addArea("{{ area.id }}", "{{ area.name }}", parentID);
     {% end %}
     {% for municipality in municipalities %}
@@ -79,7 +93,7 @@
     };
     parentID = "{{ municipality.area_id }}";
     if (parentID === "") {
-        parentID = swedenID;
+        parentID = selectedCountryID;
     }
     addMunicipality("{{ municipality.id }}", "{{ municipality.name }}", parentID);
     {% end %}
