--- a/templates/recovery.html
+++ b/templates/recovery.html
@@ -18,23 +18,39 @@
                         <figure class="avatar">
                             <img src="{{ static_url('img/logo.svg') }}" >
                         </figure>
-                        <form action="{{ action }}" method="post">
-                            <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+                        <form action="{{ action }}" method="{{ method }}">
+                            {% module xsrf_form_html() %}
+                            {% for node in nodes %}
+                            {% if node.attributes.name == "csrf_token" %}
+                            <input name="{{ node.attributes.name }}" type="hidden" value="{{ node.attributes.value }}" />
+                            {% elif node.attributes.name != "method" %}
                             <div class="field">
                                 <div class="control">
-                                    <input name="email" class="input is-large" type="email" placeholder="E-mail" autofocus="">
+                                    <input
+                                        name="{{ node.attributes.name }}"
+                                        class="input is-large"
+                                        type="{{ node.attributes.type }}"
+                                        placeholder="{{ placeholders[node.attributes.name] }}"
+                                        value="{{ node.attributes.value if hasattr(node.attributes, 'value') else '' }}"
+                                        />
                                 </div>
                             </div>
+                            {% else %}
+                            <input name="method" type="hidden" value="{{ node.attributes.value }}">
                             <button type="submit" class="button is-block is-info is-large is-fullwidth">
                                 Skicka länk
                             </button>
+                            {% end %}
+                            {% end %}
                         </form>
                     </div>
-                    {% if error != "" %}
+                    {% for error in errors %}
+                    {% if error.type == 'error' %}
                     <div class="notification is-danger">
                         <button class="delete"></button>
-                        {{ error }}
+                        {{ error.text }}
                     </div>
+                    {% end %}
                     {% end %}
                     {% if state == "sent_email" %}
                     <div class="notification is-success">
