feat: create new geography
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/admin/geography.html
+++ b/templates/admin/geography.html
@@ -75,14 +75,14 @@
             <div class="modal-background"></div>
             <div class="modal-card">
                 <header class="modal-card-head">
-                    <p class="modal-card-title">Skapa nytt område</p>
-                    <button id="cancelEditSmall" class="delete" aria-label="close"></button>
+                    <p id="addTitle" class="modal-card-title">Skapa nytt område</p>
+                    <button id="cancelAddSmall" class="delete" aria-label="close"></button>
                 </header>
                 <section class="modal-card-body">
                     <input class="input" id="addNewName" type="text" value="" placeholder="Namn">
                 </section>
                 <footer class="modal-card-foot">
-                    <button id="addNewButton" class="button is-success">Ok</button>
+                    <button id="addNewButton" class="button is-success" >Ok</button>
                     <button id="cancelAdd" class="button">Avbryt</button>
                 </footer>
             </div>
